--- a/index.html
+++ b/index.html
@@ -17,6 +17,9 @@
 	body {
 		font-family: 微軟正黑體;
 	}
+	nav {
+		min-height: 4.5rem;
+	}
 	/*模組*/
 	.none {
 		cursor: default;
@@ -59,7 +62,7 @@
 	<a href="#block-1" class="none">
 	  <img class="d-block w-100" src="assets/images/header_1.png" alt="First slide">
 		<div class="carousel-caption">
-			<h5>前往第一部分</h5>
+			<h5>線上DLC已經推出！</h5>
 			<p>想看到更多關於遊戲天命2資料片推出內容</p>
 		  </div>
 		</a>
@@ -107,8 +110,8 @@
 			  <img class="card-img-top" src="assets/images/card_1.png" alt="Card image cap">
 			  <div class="card-body">
 				<h5 class="card-title">湯姆克蘭西：全境封鎖 2</h5>
-				<p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-				<a href="#" class="btn btn-warning">註冊測試版</a>
+				<p class="card-text"> Ubisoft 於剛剛確定，《湯姆克蘭西：全境封鎖2》正在開發中，預定於2018 E3 電玩展正式揭露。 《湯姆克蘭西：全境封鎖》是款線上開放世界角色扮演 ...</p>
+				<a href="https://tomclancy-thedivision.ubisoft.com/game/en-us/beta" class="btn btn-warning">註冊測試版</a>
 			  </div>
 			</div>
 			<!--2 card-->
@@ -116,7 +119,7 @@
 			  <img class="card-img-top" src="assets/images/card_2.jpg" alt="Card image cap">
 			  <div class="card-body">
 				<h5 class="card-title">刺客教條：奧德賽</h5>
-				<p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+				<p class="card-text">刺客教條：奧德賽》新作閃電發表，歡迎來到斯巴達！ 太突然了！Ubisoft 稍早全球曝光《刺客教條》系列新作《刺客教條：奧德賽》（Assassin's Creed ...</p>
 				<a href="#" class="btn btn-danger">立即預購</a>
 			  </div>
 			</div>
@@ -131,11 +134,12 @@
 			</div>
 			<!--4 card-->
 			<div class="card mt-3">
-			  <img class="card-img-top" src=".../100px180/" alt="Card image cap">
+			  <img class="card-img-top" src="assets/images/card_4.jpg" alt="Card image cap">
 			  <div class="card-body">
-				<h5 class="card-title">Card title</h5>
-				<p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-				<a href="#" class="btn btn-primary"  id="block-2">Go somewhere</a>
+				<h5 class="card-title">本周天命2在Bungie</h5>
+				<p class="card-text">在本週的Bungie快報，薩拉丁領主給守護者們再次獲得裝飾的機會。
+鋼鐵旗幟回來了，而且還不是第3賽季的最後一場。有對戰要贏、有階級要提升，並且還有各種獎勵等著收集呢。這也是你唯一在《天命2》的熔爐競技場享受六對六戰鬥的機會——至少下週還是啦。</p>
+				<a href="https://bungie.net/" class="btn btn-danger"  id="block-2">前往官網</a>
 			  </div>
 			</div>
 		</div>
@@ -150,14 +154,15 @@
 				<div class="card-header" id="headingOne" data-toggle="collapse" data-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
 				  <h5 class="mb-0">
 					<button class="btn btn-link" type="button">
-					  預設開啟的內容
+						<i class="fas fa-link mr-2"></i>什麼是安全SSL認證？
 					</button>
 				  </h5>
 				</div>
 
 				<div id="collapseOne" class="collapse show" aria-labelledby="headingOne" data-parent="#accordionExample">
 				  <div class="card-body">
-					Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. 3 wolf moon officia aute, non cupidatat skateboard dolor brunch. Food truck quinoa nesciunt laborum eiusmod. Brunch 3 wolf moon tempor, sunt aliqua put a bird on it squid single-origin coffee nulla assumenda shoreditch et. Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident. Ad vegan excepteur butcher vice lomo. Leggings occaecat craft beer farm-to-table, raw denim aesthetic synth nesciunt you probably haven't heard of them accusamus labore sustainable VHS.
+					 <img src="assets/images/ssl.png" class="w-50 mb-2"><br>
+					傳輸層安全性協定，及其前身安全通訊協定是一種安全協定，目的是為網際網路通訊，提供安全及資料完整性保障。網景公司在1994年推出首版網頁瀏覽器，網景領航員時，推出HTTPS協定，以SSL進行加密，這是SSL的起源。IETF將SSL進行標準化，1999年公布第一版TLS標準檔案。
 				  </div>
 				</div>
 			  </div>
@@ -165,12 +170,13 @@
 				<div class="card-header" id="headingTwo"  data-toggle="collapse" data-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
 				  <h5 class="mb-0">
 					<button class="btn btn-link collapsed" type="button">
-					  購買後要如何退款？
+					  <i class="fab fa-cc-visa mr-2"></i>購買後要如何退款？
 					</button>
 				  </h5>
 				</div>
 				<div id="collapseTwo" class="collapse" aria-labelledby="headingTwo" data-parent="#accordionExample">
 				  <div class="card-body">
+					 <img src="assets/images/steam.png" class="w-50 mb-2"><br>
 					你可以用任何理由要求 Steam 進行退款。也許是你的電腦硬體不符合要求；也許你不小心買錯一款遊戲；又或者你玩了一小時發現就是不喜歡它。
 
 都沒關係。Valve 會應使用者要求，於 help.steampowered.com 網站針對購買未達 14 天且遊玩時間未達 2 小時的產品進行退款。下方有更多資訊，但如果您的狀況已超出以上退款條件，您仍然可以提出申請，我們會斟酌後做出決定。
@@ -183,13 +189,13 @@
 				<div class="card-header" id="heading0"  data-toggle="collapse" data-target="#collapse0" aria-expanded="false" aria-controls="collapse0">
 				  <h5 class="mb-0">
 					<button class="btn btn-link collapsed" type="button">
-					  購買後要如何退款？
+					  <i class="fab fa-youtube mr-2"></i>持續遊戲的支援
 					</button>
 				  </h5>
 				</div>
 				<div id="collapse0" class="collapse" aria-labelledby="heading0" data-parent="#accordionExample">
 				  <div class="card-body">
-					  ...
+					  即使遊戲過時、沒有人玩了。我們的伺服器仍含會持續運作，全年無休。您不用再擔心沒有玩這個遊戲後，伺服器被停止服務，我們不會有著個問題的。(至少是目前)
 				  </div>
 				</div>
 			  </div>
@@ -197,13 +203,14 @@
 				<div class="card-header" id="headingThree" data-toggle="collapse" data-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
 				  <h5 class="mb-0">
 					<button class="btn btn-link collapsed" type="button">
-					  Collapsible Group Item #3
+					  <i class="fab fa-xbox mr-2"></i>購買後連結帳號
 					</button>
 				  </h5>
 				</div>
 				<div id="collapseThree" class="collapse" aria-labelledby="headingThree" data-parent="#accordionExample">
 				  <div class="card-body">
-					Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. 3 wolf moon officia aute, non cupidatat skateboard dolor brunch. Food truck quinoa nesciunt laborum eiusmod. Brunch 3 wolf moon tempor, sunt aliqua put a bird on it squid single-origin coffee nulla assumenda shoreditch et. Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident. Ad vegan excepteur butcher vice lomo. Leggings occaecat craft beer farm-to-table, raw denim aesthetic synth nesciunt you probably haven't heard of them accusamus labore sustainable VHS.
+					如果您有具 Web 服務 (像是 Google、LinkedIn 或 Twitter) 的帳戶，您可以將它新增到您的 Microsoft 帳戶。這可以讓您在兩個帳戶之間共用特定資訊。例如，如果您連線 Google 帳戶，您可以選擇在連絡人和郵件 app 中看見您 Google 連絡人的電子郵件地址。Microsoft 不會在未經您允許的情況下，分享與您的 Microsoft 帳戶關聯的資訊。如果您需要更多服務的話，請洽
+					  <a href="https://support.microsoft.com/">獲取官方支援...</a>
 				  </div>
 				</div>
 			  </div>
@@ -215,7 +222,7 @@
 		<h1>遊戲藝術圖</h1>
 		<p>這些，就是玩家看不到的心血。</p>
 	</div>
-	<div class="col-12">
+	<div class="col-12" data-toggle="tooltip" data-placement="top" title="對著圖片向右滑動可進行瀏覽">
 		<div class="owl-carousel">
 		  <div class="mx-2"> <a href="assets/images/pin/01.jpg"><img src="assets/images/pin/_01.jpg"></a></div>
 		  <div class="mx-2"> <a href="assets/images/pin/02.jpg"><img src="assets/images/pin/_02.jpg"></a></div>
@@ -230,15 +237,26 @@
 <!---->
 </div>
 <!---->
-<footer class="container bg-dark text-light">
-	<div class="row">
-		<div class="col-12">
-			<!--logo-->
-			
-		</div>
-		<div class="col-12">
-			<!--info-->
-			<p>版權所有(C)1990-2018 Ubisoft Game Studio Fans.</p>
+<footer class="bg-dark text-light pt-5">
+	<div class="container">
+		<div class="row">
+			<div class="col-12">
+				<!--logo-->
+				<img src="assets/images/icon.png" alt="碧育遊戲LOGO" width="100rem">
+				<p class="mt-2 h5 font-italic">台灣Ubisoft遊戲服務公司。</p>
+			</div>
+			<div class="col-12 pl-2">
+				<!--info-->
+				<p class="h3 font-weight-bold"><i class="fas fa-headset mr-2"></i>更多服務支援</p>
+				<a href="https://ubisoft.com/">碧育官方網頁</a><br>
+				<a href="https://bungie.net/">Bungie.net 天命官網</a><br>
+				<a href="https://xbox.com/">黑暗企業</a><br>
+				<a href="index.html">本站首頁</a><br>
+			</div>
+			<div class="col-12">
+				<!--info-->
+				<p>版權所有(C)1990-2018 Ubisoft Game Studio Fans.</p>
+			</div>
 		</div>
 	</div>
 </footer>
@@ -304,6 +322,10 @@
 	  type: 'image'
 	  // other options
 	});
+	//顯示提示文字
+	$(function () {
+	  $('[data-toggle="tooltip"]').tooltip()
+	})
 </script>
 </body>
 </html>
