--- a/index.html
+++ b/index.html
@@ -234,9 +234,9 @@
 		</div>
 	</div>
 </div>
-<!---->
+<!--main part end-->
 </div>
-<!---->
+<!--for footer-->
 <footer class="bg-dark text-light pt-5">
 	<div class="container">
 		<div class="row">
@@ -284,31 +284,12 @@
     </div>
   </div>
 </div>
-<div class="modal fade" id="ART" tabindex="-1" role="dialog" aria-labelledby="exampleModalLongTitle" aria-hidden="true">
-  <div class="modal-dialog" role="document">
-    <div class="modal-content">
-      <div class="modal-header">
-        <h5 class="modal-title" id="ART">文章狀態：預覽模式</h5>
-        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-          <span aria-hidden="true">&times;</span>
-        </button>
-      </div>
-      <div class="modal-body">
-		  <h4>新的DLC資料片即將推出！</h4>
-		  <p>你必須購買遊戲藝術圖資料片DLC才能觀看到更多高畫質的內容。</p>
-      </div>
-      <div class="modal-footer">
-        <button type="button" class="btn btn-secondary" data-dismiss="modal">關閉</button>
-        <!--button type="button" class="btn btn-primary"></button-->
-      </div>
-    </div>
-  </div>
-</div>
 <!--Script-->
 <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
 <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.2/js/bootstrap.min.js" integrity="sha384-o+RDsa0aLu++PJvFqy8fFScvbHFLtbvScb8AjopnFD+iEQ7wo/CG0xlczd+2O/em" crossorigin="anonymous"></script>
+<!--for jquery javascript-->
 <script src="assets/dist/owl.carousel.min.js"></script>
 <script src="assets/dist/jquery.magnific-popup.min.js"></script>
 <script>
