--- a/index.html
+++ b/index.html
@@ -9,13 +9,15 @@
 <!--CSS link-->
 <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.2/css/bootstrap.min.css" integrity="sha384-Smlep5jCw/wG7hdkwQ/Z5nLIefveQRIY9nfy6xoR1uRYBtpZgI6339F5dgvm/e9B" crossorigin="anonymous">
 <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.1.0/css/all.css" integrity="sha384-lKuwvrZot6UHsBSfcMvOkWwlCMgc0TaWr+30HWe3a4ltaBwTZhyTEggF5tJv8tbt" crossorigin="anonymous">
+<link href="https://fonts.googleapis.com/css?family=Roboto:500" rel="stylesheet">
+<link href='https://fonts.googleapis.com/css?family=Product+Sans' rel='stylesheet' type='text/css'>
 <!--for script-->
 <link rel="stylesheet" href="assets/dist/owl.carousel.min.css">
 <link rel="stylesheet" href="assets/dist/owl.theme.default.css">
 <link rel="stylesheet" href="assets/dist/magnific-popup.css">
 <style>
 	body {
-		font-family: "Roboto", 微軟正黑體;
+		font-family: "Product Sans", roboto, 微軟正黑體;
 	}
 	nav {
 		min-height: 4.5rem;
@@ -152,10 +154,16 @@
 </div>
 <!---->
 <div class="container mt-5" id="block-1">
+    <div class="alert alert-warning alert-dismissible fade show shadow" role="alert">
+      <strong class="mr-2">[Messege]</strong> Tom Clancy's The Division 2 Sing Up is available !
+      <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+        <span aria-hidden="true">&times;</span>
+      </button>
+    </div>
 	<div class="row">
 		<div class="col-12">
 			<!--title game-->
-			<h1>Game of Year</h1>
+			<h1 class="font-weight-bold">Game of Year</h1>
 			<p>Give our player bestest feeling</p>
 		</div>
 	</div>
@@ -166,7 +174,7 @@
 			<div class="card mt-3 card-game">
 			  <img class="card-img-top" src="assets/images/card_1.png" alt="Card image cap">
 			  <div class="card-body">
-				<h5 class="card-title font-title">Tom Clancy's The Division 2</h5>
+				<h5 class="card-title font-title font-weight-bold">Tom Clancy's The Division 2</h5>
 				<p class="card-text">Various factions, vying for power in the wake of the crisis, are aiming to claim DC’s future for themselves. Only Division agents are equipped to take...</p>
 				<a href="https://tomclancy-thedivision.ubisoft.com/game/en-us/beta" class="btn btn-warning">BETA</a>
 			  </div>
@@ -177,7 +185,7 @@
 			<div class="card mt-3 card-game">
 			  <img class="card-img-top" src="assets/images/card_2.jpg" alt="Card image cap">
 			  <div class="card-body">
-				<h5 class="card-title font-title">Assassin’s Creed</h5>
+				<h5 class="card-title font-title font-weight-bold">Assassin’s Creed</h5>
 				<p class="card-text">Write your own epic odyssey and become a legendary Spartan hero in Assassin's Creed® Odyssey, an inspiring adventure where you must forge your destiny and define your own path in a world...</p>
 				<a href="#" class="btn btn-danger">PRE-ODER</a>
 			  </div>
@@ -188,7 +196,7 @@
 			<div class="card mt-3 card-game">
 			  <img class="card-img-top" src="assets/images/card_3.gif" alt="Card image cap"  data-toggle="modal" data-target="#Card-NEWS-1">
 			  <div class="card-body">
-				<h5 class="card-title font-title">The New DLC!</h5>
+				<h5 class="card-title font-title font-weight-bold">The New DLC!</h5>
 				<p class="card-text">And for now on Alongside seasonal updates and live events available to every Destiny 2 player, Forsaken Annual Pass provides bonus rewards and introduces three premium ...</p>
 				<a href="#" class="btn btn-primary" data-toggle="modal" data-target="#Card-NEWS-1">PRE-ODER</a>
 			  </div>
@@ -199,7 +207,7 @@
 			<div class="card mt-3 card-game">
 			  <img class="card-img-top" src="assets/images/card_4.jpg" alt="Card image cap">
 			  <div class="card-body">
-				<h5 class="card-title">THIS WEEK AT BUNGIE</h5>
+				<h5 class="card-title font-weight-bold">THIS WEEK AT BUNGIE</h5>
 				<p class="card-text">Iron Banner is back, and not even for the last time in Season 3. There are matches to be won, ranks to earn, and rewards to collect. This is also your one and only chance to enjoy...</p>
 				<a href="https://bungie.net/" class="btn btn-danger"  id="block-2">MORE</a>
 			  </div>
@@ -209,7 +217,7 @@
 				
 		<div class="row mt-4">
 			<div class="col-12">
-				<h1><i class="far fa-credit-card fa-sm"></i> Secure payment environment</h1>
+				<h1 class="font-weight-bold"><i class="far fa-credit-card fa-sm news-fowell"></i> Secure payment environment</h1>
 				<p class="ml-md-5 ml-0 mb-md-4">Combine SSL's secure privacy technology to make your credit card payment more secure.</p>
 			</div>
 			<div class="accordion my-2 col" id="accordionExample">
@@ -279,7 +287,7 @@
 	<!--Block step-->
 <div class="raw">
 	<div class="col-12 mt-4">
-		<h1>Game Art</h1>
+		<h1 class="font-weight-bold">Game Art</h1>
 		<p>These are the efforts that the player can't see.</p>
 	</div>
 	<div class="col-12" data-toggle="tooltip" data-placement="top" title="Swipe right to the image to browse" >
@@ -312,8 +320,9 @@
 				<a href="https://bungie.net/">Bungie.net</a><br>
 				<a href="https://xbox.com/">SuckSoft</a><br>
 				<a href="index.html">Back to Website (This page)</a><br>
+                <a href="README.md">LICENSE</a>
 			</div>
-			<div class="col-12">
+			<div class="col-12 pl-2 mt-4 font-italic">
 				<!--info-->
 				<p>Copyright (C)1990-2018 Ubisoft Game Studio Fans.</p>
 			</div>
