--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
 		</a>
 	</div>
     <div class="carousel-item">
-	<a href="#block-2" class="cursor-none">
+	<a href="http://readyplayeronemovie.com/" class="cursor-none">
       <img class="d-block w-100" src="assets/images/header_2.gif" alt="First slide">
 		<div class="carousel-caption">
 			<img src="assets/images/header_2.png" height="150px">
