--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@
 		<!--Card info game-->
 		<!--First card-->
 		<div class="col-md-6 col-lg-3">
-			<div class="card mt-3 card-game shadow-lg my-4">
+			<div class="card mt-3 card-game">
 			  <img class="card-img-top" src="assets/images/card_1.png" alt="Card image cap">
 			  <div class="card-body">
 				<h5 class="card-title font-title font-weight-bold">Tom Clancy's The Division 2</h5>
@@ -182,7 +182,7 @@
 		</div>
 						<!--2 card-->
 		<div class="col-md-6 col-lg-3">
-			<div class="card mt-3 card-game shadow-lg my-4">
+			<div class="card mt-3 card-game">
 			  <img class="card-img-top" src="assets/images/card_2.jpg" alt="Card image cap">
 			  <div class="card-body">
 				<h5 class="card-title font-title font-weight-bold">Assassin’s Creed</h5>
@@ -193,7 +193,7 @@
 		</div>
 		<!--3 card-->
 		<div class="col-md-6 col-lg-3">
-			<div class="card mt-3 card-game shadow-lg my-4">
+			<div class="card mt-3 card-game">
 			  <img class="card-img-top" src="assets/images/card_3.gif" alt="Card image cap"  data-toggle="modal" data-target="#Card-NEWS-1">
 			  <div class="card-body">
 				<h5 class="card-title font-title font-weight-bold">The New DLC!</h5>
@@ -204,7 +204,7 @@
 		</div>
 		<!--4 card-->
 		<div class="col-md-6 col-lg-3">
-			<div class="card mt-3 card-game shadow-lg my-4">
+			<div class="card mt-3 card-game">
 			  <img class="card-img-top" src="assets/images/card_4.jpg" alt="Card image cap">
 			  <div class="card-body">
 				<h5 class="card-title font-weight-bold">THIS WEEK AT BUNGIE</h5>
@@ -404,9 +404,9 @@
         if(list[index] == null) continue;
         try{
         $(list[index]).hover(function(){
-            $(this).removeClass(['shadow-lg','my-4']);
-        },function(){
             $(this).addClass(['shadow-lg','my-4']);
+        },function(){
+            $(this).removeClass(['shadow-lg','my-4']);
         });}catch(e){}
     }
     	$(function () {
