--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
 <div class="container mt-5" id="block-1">
     <div class="alert alert-warning alert-dismissible fade show shadow font-title" role="alert">
       <strong class="mr-2">[Messege]</strong> Tom Clancy's The Division 2 Sing Up is available !
-      <a href="https://tomclancy-thedivision.ubisoft.com/game/en-us/beta">Chick here, to sing up.</a>
+      <a href="https://tomclancy-thedivision.ubisoft.com/game/en-us/beta">Chick here</a>, to sing up.
       <button type="button" class="close" data-dismiss="alert" aria-label="Close">
         <span aria-hidden="true">&times;</span>
       </button>
