--- a/index.html
+++ b/index.html
@@ -221,7 +221,7 @@
 				<h1 class="font-weight-bold"><i class="far fa-credit-card fa-sm news-fowell"></i> Secure payment environment</h1>
 				<p class="ml-md-5 ml-0 mb-md-4">Combine SSL's secure privacy technology to make your credit card payment more secure.</p>
 			</div>
-			<div class="accordion my-2 col" id="accordionExample">
+			<div class="accordion my-2 col-12 col-md-6" id="accordionExample">
 			  <div class="card card-list">
 				<div class="card-header" id="headingOne" data-toggle="collapse" data-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
 				  <h5 class="mb-0">
