--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@
 		<!--Card info game-->
 		<!--First card-->
 		<div class="col-md-6 col-lg-3">
-			<div class="card mt-3 card-game my-4">
+			<div class="card mt-3 card-game mt-4">
 			  <img class="card-img-top" src="assets/images/card_1.png" alt="Card image cap">
 			  <div class="card-body">
 				<h5 class="card-title font-title font-weight-bold">Tom Clancy's The Division 2</h5>
@@ -183,7 +183,7 @@
 		</div>
 						<!--2 card-->
 		<div class="col-md-6 col-lg-3">
-			<div class="card mt-3 card-game my-4">
+			<div class="card mt-3 card-game mt-4">
 			  <img class="card-img-top" src="assets/images/card_2.jpg" alt="Card image cap">
 			  <div class="card-body">
 				<h5 class="card-title font-title font-weight-bold">Assassin’s Creed</h5>
@@ -194,7 +194,7 @@
 		</div>
 		<!--3 card-->
 		<div class="col-md-6 col-lg-3">
-			<div class="card mt-3 card-game my-4">
+			<div class="card mt-3 card-game mt-4">
 			  <img class="card-img-top" src="assets/images/card_3.gif" alt="Card image cap"  data-toggle="modal" data-target="#Card-NEWS-1">
 			  <div class="card-body">
 				<h5 class="card-title font-title font-weight-bold">The New DLC!</h5>
@@ -205,7 +205,7 @@
 		</div>
 		<!--4 card-->
 		<div class="col-md-6 col-lg-3">
-			<div class="card mt-3 card-game my-4">
+			<div class="card mt-3 card-game mt-4">
 			  <img class="card-img-top" src="assets/images/card_4.jpg" alt="Card image cap">
 			  <div class="card-body">
 				<h5 class="card-title font-weight-bold">THIS WEEK AT BUNGIE</h5>
@@ -405,11 +405,11 @@
         if(list[index] == null) continue;
         try{
         $(list[index]).hover(function(){
-            $(this).removeClass('my-4');
+            $(this).removeClass('mt-4');
 	    $(this).addClass('shadow-lg');
         },function(){
             $(this).removeClass('shadow-lg');
-	    $(this).addClass('my-4');
+	    $(this).addClass('mt-4');
         });}catch(e){}
     }
     	$(function () {
