--- a/index.html
+++ b/index.html
@@ -16,8 +16,9 @@
 <link rel="stylesheet" href="assets/dist/owl.theme.default.css">
 <link rel="stylesheet" href="assets/dist/magnific-popup.css">
 <style>
+@font-face{font-family:UbisoftSans;src:url("https://ubistatic19-a.akamaihd.net/marketingresource/en-us/ubisoft/home/assets/fonts/UbisoftSans-Regular.woff2") format("woff2"),url("https://ubistatic19-a.akamaihd.net/marketingresource/en-us/ubisoft/home/assets/fonts/UbisoftSans-Regular.woff") format("woff")}@font-face{font-family:UbisoftSans-Bold;src:url("https://ubistatic19-a.akamaihd.net/marketingresource/en-us/ubisoft/home/assets/fonts/UbisoftSans-Bold.woff2") format("woff2"),url("https://ubistatic19-a.akamaihd.net/marketingresource/en-us/ubisoft/home/assets/fonts/UbisoftSans-Bold.woff") format("woff")}
 	body {
-		font-family: "Product Sans", roboto, 微軟正黑體;
+		font-family: "UbisoftSans", roboto, 微軟正黑體;
 	}
 	nav {
 		min-height: 4.5rem;
